Fixed some bugs and UI

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -40,9 +40,9 @@ import Hamburger from "./Hamburger.astro";
              secondText="Spanish Jobs" 
              thirdText="English Jobs" 
              fourText="Technician"
-             idSecond="/#jobs"
-             idThird="/#jobs"
-             idFour="/#jobs"
+             idSecond="/spanish"
+             idThird="/english"
+             idFour="/technician"
              />
         </div>
         <div class="flex">
