--- a/src/pages/english.astro
+++ b/src/pages/english.astro
@@ -11,8 +11,9 @@ import OfferCard from "../components/OfferCard.astro";
         <section class="flex flex-col m-4 mt-20 p-4">
             <h1 class="sm:text-4xl text-4xl font-bold">Online Helper – English Speakers</h1>
             <p class="mt-6 text-x max-w-2xl text-xl">Hi there! We’re glad you want to join the Online Helpers team. In this section, you’ll find all the details about the position and how to apply.</p>
-            <div class="mt-10">
+              <div class="mt-10 flex flex-wrap gap-4">
                 <LinkButton content="Details" href="#details"/>
+                <LinkButton content="Apply"/>
             </div>
         </section>
         <section class="flex justify-center items-center m-auto">
@@ -34,7 +35,7 @@ import OfferCard from "../components/OfferCard.astro";
 
     <section>
         <h1 class="sm:text-4xl text-3xl font-bold text-center">What Are the Requirements?</h1>
-        <section class="flex flex-wrap justify-center gap-20 mt-10">
+        <section class="flex flex-wrap justify-center gap-10 mt-10">
             <section class="m-4 p-4 mt-10">
                 <h1 class="text-center sm:text-left m-10 text-2xl font-bold">Your Responsibilities</h1>
                 <section class="max-w-lg mt-10">
@@ -52,7 +53,6 @@ import OfferCard from "../components/OfferCard.astro";
                     </div>
                 </section>
                 <div class="m-8">
-                    <LinkButton content="Apply"/>
                 </div>
             </section>
 
@@ -73,7 +73,6 @@ import OfferCard from "../components/OfferCard.astro";
                     </div>
                 </section>
                 <div class="m-8">
-                    <LinkButton content="Apply" href="/"/>
                 </div>
             </section>
         </section>
