Change header color

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ import ArrowDown from "./ArrowDown.astro";
 import Hamburger from "./Hamburger.astro";
 ---
 
-<header class="header flex items-center justify-between m-auto max-w-6xl z-20">
+<header class="header flex items-center justify-between m-auto z-20 bg-amber-300">
   <section class="">
     <div class="flex items-center justify-between">
       <div class="sm:hidden m-4 p-4 z-20">
