--- a/src/components/AnchorLink.astro
+++ b/src/components/AnchorLink.astro
@@ -69,7 +69,7 @@ import '@fontsource/poppins'
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #f6e201;
+  background-color: ;
   z-index: -1;
   transform: scaleX(0);
   transform-origin: left;
