Change header color

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,10 +6,11 @@
     <hr>
     <section class="flex gap-4 p-10 justify-center text-center sm:text-left items-center flex-wrap sm:justify-between ">
         <div class="p-4">
+            <img src="./OH.png" alt="" width="200px">
             <h2 class="m-4">@All rights reserved for <b></b>Online Helpers 2025</h2>
-            <a href="" class="font-bold m-4 mt-4">Privacy Policy</a>
+            <a href="/privacy" class="font-bold m-4 mt-4">Privacy Policy</a>
         </div>
-        <section class="flex flex-col justify-center">
+        <section class="flex flex-col justify-center items-center">
             <div>
                 <p class="text-center">Our Social Media</p>
             </div>
@@ -20,6 +21,7 @@
                 <a href="https://www.linkedin.com/company/online-helpers-remote-global-support/"> <img src="/linkedin.svg" alt="" width="30px"></a>  
             </div>
         </section>
+
     </section>
 </footer>
 
