--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import LookingFor from "../components/LookingFor.astro";
 import Layout from "../layouts/Layout.astro";
 import Footer from "../components/Footer.astro";
 import Gallery from "../components/Gallery.astro";
+import GalleryImages from "../components/GalleryImages.astro";
 ---
 <html lang="en">
 	<head>
@@ -21,6 +22,7 @@ import Gallery from "../components/Gallery.astro";
 		<LookingFor />
 		<hr>
 		<Candidates />
+		<GalleryImages />
 		<Gallery />
 	</Layout>
 </html>
