--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -1,6 +1,6 @@
 ---
 import GalleryItem from './GalleryItem.astro'
-const firstTestimonie = 'Working remotely with Online Helpers has given me the chance to improve my skills every day. I feel more confident in my career and I can grow while working with new people in the world.'
+const firstTestimonie = 'Working remotely with Online Helpers has given me the chance to improve my skills every day. I feel more confident in my career and I can grow while working remote.'
 const secondTestimonie = 'Working with Online Helpers has allowed me to take better care of myself. I can manage my time, focus on exercise and mental health, and still grow professionally at the same time'
 const thirdTestimonie = 'Thanks to Online Helpers I’ve been able to practice my English on a daily basis. It’s not only a job, it’s also a space where I keep improving and learning something new all the time.'
 const fourtTestimonie = 'Thanks to Online Helpers I feel less stressed and more balanced. Remote work allows me to take care of my health, exercise, and focus on my well-being while still being productive'
